--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Carlog 
-subtitle: Where Haishan Write 
+title: Carlog
+subtitle: Where Haishan Write
 description:
 author: haishanh
 language:
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://hanhaishan.com
+url: http://blog.hanhaishan.com
 root: /
 # permalink: :year/:month/:day/:title/
 permalink: :title/
@@ -40,7 +40,7 @@ relative_link: false
 future: true
 highlight:
   enable: true
-  line_number: true
+  line_number: false
   auto_detect: true
   tab_replace:
 
@@ -64,11 +64,22 @@ pagination_dir: page
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: start 
+theme: zxcvb
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:haishanh/blog.git 
+  repo: git@github.com:haishanh/blog.git
   branch: gh-pages
+
+menu:
+  Home: /
+  Archives: /archives
+  RSS: /atom.xml
+
+footer: <span>&copy;</span> 2016 <a href="http://hanhaishan.com">Haishan</a><br>
+  Powered by <a href="https://hexo.io">Hexo</a>, theme using <a href="https://github.com/haishanh/hexo-theme-zxcvb">zxcvb</a>, hosted by <a href="https://github.com/haishanh/blog/tree/gh-pages">Github Pages</a>
+
+logo:
+  text: Carlog
